--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.7.0/css/all.css">
         <title>GridBiz</title>
-    <link rel="stylesheet" href="resources/styles.sass">
+    <link rel="stylesheet" href="resources/styles.css">
 </head>
 <body>
     <div class="wrapper">
@@ -65,7 +65,7 @@
 
         <!--INFO SECTION-->
         <section class="info">
-            <img src="" alt="">
+            <img src="./resources/media/rm.jpg" alt="colleagues taking notes">
             <div>
                 <h2>Your Business on the web</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum aperiam reprehenderit quis hic rem illo ducimus voluptate, nisi soluta nobis, excepturi consequatur odio quia ab rerum. Quo obcaecati voluptatum sint!</p>
